go-istio/kube_config/API1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
 name: api1-deployment
spec:
 selector: 
  matchLabels:
   app: A
 replicas: 1
 template:
  metadata:
   labels:
    app: A
  spec: 
   containers:
   - name: api1
     image: firstgo:v5
     ports:
     - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
 name: api1-service
spec:
 ports:
 - port: 80
   targetPort: 8080
   protocol: TCP
   name: http
 selector:
  app: A
