go-istio/kube_config/API2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
 name: api2-deployment
spec:
 selector: 
  matchLabels:
   app: B
 replicas: 1
 template:
  metadata:
   labels:
    app: B
  spec: 
   containers:
   - name: api2
     image: secondgo:v1
     ports:
     - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
 name: api2-service
spec:
 type: ClusterIP
 ports:
 - port: 80
   targetPort: 8080
   protocol: TCP
   name: http
 selector:
  app: B
