go-istio/kube_config/API3.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
 name: api3-deployment
spec:
 selector: 
  matchLabels:
   app: C
 replicas: 1
 template:
  metadata:
   labels:
    app: C
  spec: 
   containers:
   - name: api3
     image: thirdgo:v1
     ports:
     - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
 name: api3-service
spec:
 type: ClusterIP
 ports:
 - port: 80
   targetPort: 8080
   protocol: TCP
   name: http
 selector:
  app: C
